😝🛰️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@ Select ONE Additional Feature to Add
       h2 {
         color: rgb(240, 129, 128);
       }
+      table,
+      th,
+      td {
+        border: 1px solid;
+      }
     </style>
   </head>
 
@@ -80,9 +85,21 @@ Select ONE Additional Feature to Add
         uncovered, stirring occasionally, until tender yet firm to the bite,
         about 8 to 10 minutes. Drain and transfer into a large bowl.
       </li>
-<li></li>
-
-      <em>Source: <a href="?">Some recipes websites</a></em>
-    </p>
+      <li>
+        <strong>Step 3:</strong> Move on to making the sauce by stirring in
+        pesto, salt, and pepper until warmed through.
+      </li>
+      <li>
+        <strong>Step 4:</strong> Add your pesto sauce to the hot pasta; stir in
+        grated cheese and toss well to coat.
+      </li>
+      <em>Source: <a href="?">https://www.allrecipes.com/recipe/11887/pesto-pasta/</a></em>
+  <h2><u>Recipe #2 Lemon Loaf:</u></h2>
+<img> src="https://www.recipetineats.com/uploads/2023/06/Glazed-lemon-loaf_4.jpg"
+ <ul>
+      <li>Time: 1 hour 15 min</li>
+      <li>Serves: 8</li>
+    </ul>
+    </p> 
   </body>
 </html>
