--- a/index.html
+++ b/index.html
@@ -93,13 +93,69 @@ Select ONE Additional Feature to Add
         <strong>Step 4:</strong> Add your pesto sauce to the hot pasta; stir in
         grated cheese and toss well to coat.
       </li>
-      <em>Source: <a href="?">https://www.allrecipes.com/recipe/11887/pesto-pasta/</a></em>
-  <h2><u>Recipe #2 Lemon Loaf:</u></h2>
-<img> src="https://www.recipetineats.com/uploads/2023/06/Glazed-lemon-loaf_4.jpg"
- <ul>
+    </p>
+    <ul>
+      <em
+        >Source:
+        <a href="?">https://www.allrecipes.com/recipe/11887/pesto-pasta/</a></em
+      >
+      <h2><u>Recipe #2 Lemon Loaf:</u></h2>
+      <img
+        src="https://www.recipetineats.com/uploads/2023/06/Glazed-lemon-loaf_4.jpg"
+        width="200"
+        <ul
+      />
       <li>Time: 1 hour 15 min</li>
       <li>Serves: 8</li>
     </ul>
-    </p> 
+
+    <table>
+      <thead>
+        <tr>
+          <th>Ingredients</th>
+          <th>Quantity</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Butter</td>
+          <td>½ cup</td>
+        </tr>
+        <tr>
+          <td>White sugar</td>
+          <td>½ cup</td>
+        </tr>
+        <tr>
+          <td>Package Of Pasta</td>
+          <td>16 o</td>
+        </tr>
+        <tr>
+          <td>Parmasean Cheese</td>
+          <td>2 tbs</td>
+        </tr>
+        <tr>
+          <td>Salt/Pepper</td>
+          <td>Your choosing</td>
+        </tr>
+      </tbody>
+    </table>
+  <p>
+      <strong><u>Directions:</u></strong>
+      <li><strong>Step 1:</strong> Gather all ingredients</li>
+      <li>
+        <strong>Step 2:</strong> Fill a large pot with lightly salted water and
+        bring to a rolling boil. Stir in pasta and return to a boil. Cook pasta
+        uncovered, stirring occasionally, until tender yet firm to the bite,
+        about 8 to 10 minutes. Drain and transfer into a large bowl.
+      </li>
+      <li>
+        <strong>Step 3:</strong> Move on to making the sauce by stirring in
+        pesto, salt, and pepper until warmed through.
+      </li>
+      <li>
+        <strong>Step 4:</strong> Add your pesto sauce to the hot pasta; stir in
+        grated cheese and toss well to coat.
+      </li>
+    </p>
   </body>
 </html>
