📋⚜️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Requirements
 [ yes ] Three Images
 
 Select ONE Additional Feature to Add  
-[ no ] Feature 1 - Include a :hover feature
+[ yes ] Feature 1 - Include a :hover feature
 [ no ] Feature 2 - Include at least two Internal links
 [ no ] Feature 3 - Include a list in a tabl
 [ no ] Feature 4 - Include at least two background images in a table
@@ -29,15 +29,27 @@ Select ONE Additional Feature to Add
       td {
         border: 1px solid;
       }
+      img {
+        border: 8px solid #FBD5AB;
+      }
+      h2:hover {
+background-color: pink;
+color: white;
+}
+      img {
+border-radius: 20px;
+}
     </style>
   </head>
 
   <body>
     <h1><u>Isabel's Recipe Book</u></h1>
 
-    <h2>Contents:</h2>
+    <h2><u>Contents:</u></h2>
     <ol>
       <li><a href="?">Recipe #1 Pesto Pasta:</a></li>
+<li><a href="?">Recipe #2 Lemon Loaf:</a></li>
+<li><a href="?">Recipe #3 Garlic Bread:</a></li>
     </ol>
 
     <h2 id="?"><u>Recipe #1 Pesto Pasta:</u></h2>
@@ -60,19 +72,19 @@ Select ONE Additional Feature to Add
       <tbody>
         <tr>
           <td>Olive oil</td>
-          <td>2 tbs</td>
+          <td>2 tablespoon</td>
         </tr>
         <tr>
           <td>Pesto Sauce</td>
-          <td>2 ½ tbs</td>
+          <td>2 ½ tablespoons</td>
         </tr>
         <tr>
           <td>Package Of Pasta</td>
-          <td>16 o</td>
+          <td>16 ounces</td>
         </tr>
         <tr>
           <td>Parmasean Cheese</td>
-          <td>2 tbs</td>
+          <td>2 tablespoons</td>
         </tr>
         <tr>
           <td>Salt/Pepper</td>
@@ -103,7 +115,8 @@ Select ONE Additional Feature to Add
         >Source:
         <a href="?">https://www.allrecipes.com/recipe/11887/pesto-pasta/</a></em
       >
-      <h2><u>Recipe #2 Lemon Loaf:</u></h2>
+
+     <h2><u>Recipe #2 Lemon Loaf:</u></h2>
       <img
         src="https://www.recipetineats.com/uploads/2023/06/Glazed-lemon-loaf_4.jpg"
         width="200"
@@ -199,7 +212,9 @@ Select ONE Additional Feature to Add
     </p>
     <em
       >Source:
-      <a href="?">https://www.allrecipes.com/recipe/11887/pesto-pasta/</a></em
+      <a href="?"
+        >https://www.allrecipes.com/recipe/176636/lemon-loaf-cake/</a
+      ></em
     >
     <h2>
       <u>Recipe #3 Garlic bread:</u>
@@ -221,7 +236,7 @@ Select ONE Additional Feature to Add
       </thead>
       <tbody>
         <tr>
-          <td>Butter</td>
+          <td>Butter, softened</td>
           <td>½ cup</td>
         </tr>
         <tr>
@@ -232,7 +247,49 @@ Select ONE Additional Feature to Add
           <td>Minced cloves of garlic</td>
           <td>4</td>
         </tr>
+        <tr>
+          <td>Garlic powder</td>
+          <td>1 tablespoon</td>
+        </tr>
+        <tr>
+          <td>Chopped fresh parsley</td>
+          <td>1 tablespoon</td>
+        </tr>
+        <tr>
+          <td>Salt</td>
+          <td>½ teaspoon</td>
+        </tr>
+        <tr>
+          <td>French bread</td>
+          <td>1 loaf</td>
+        </tr>
       </tbody>
     </table>
+    <p>
+      <strong><u>Directions:</u></strong>
+      <li>
+        <strong>Step 1:</strong> Preheat the oven to 400 degrees F (200 degrees
+        C). Line a baking sheet with aluminum foil.
+      </li>
+      <li>
+        <strong>Step 2:</strong> Mix butter, olive oil, minced garlic, garlic
+        powder, parsley, and salt in a bowl until well combined.
+      </li>
+      <li>
+        <strong>Step 3:</strong> Cut bread loaf into 1-inch slices and spread
+        garlic mixture over each slice. Place each on a baking sheet. Wrap with
+        additional aluminum foil.
+      </li>
+      <li>
+        <strong>Step 4:</strong> Bake in the preheated oven until bread is
+        crispy and heated through, 25 to 30 minutes.
+      </li>
+    </p>
+<em
+      >Source:
+      <a href="?"
+        >https://www.allrecipes.com/recipe/273325/homemade-garlic-bread/</a
+      ></em
+    >
   </body>
 </html>
